--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-$LesyasFavouriteColor: #99b5d2;
-body {
-  background-color: $LesyasFavouriteColor;
-}
+// $LesyasFavouriteColor: #99b5d2;
+// body {
+//   background-color: $LesyasFavouriteColor;
+// }
